--- a/templates/base.html
+++ b/templates/base.html
@@ -23,24 +23,31 @@
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link text-white" href="/heladeras/">Heladeras </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" href="/celulares/">Celulares</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" href="/televisores/">Televisores</a>
-                </li>
-                <li class="nav-item" style="margin-right: 40rem">
+        <li class="nav-item active">
+            <a class="nav-link text-white" href="/contact/">Contacto</a>
+        </li>
+
+        <li class="nav-item active ">
+            <a class="nav-link text-white" href="/aboutus/">Sobre Nosotros</a>
+        </li>
+        {% if request.user.is_authenticated %}
+        <li>
+        <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
+            Nuestros Productos
+        </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="/heladeras/">Heladeras </a>
+                    <a class="dropdown-item" href="/celulares/">Celulares</a>
+                    <a class="dropdown-item" href="/televisores/">Televisores</a>
+                </div>
+            </li>
+    {% endif %}
+                <li class="nav-item" style="margin-right: 35rem">
                     
                 {% if request.user.is_authenticated %}
                 <li class="nav-item text-white" style="margin-right: 2rem">
                     <h5>{{request.user.username}}</h5>
                 </li>
-
                 <li class="nav-item">
                     <a class="nav-link text-white" href="/logout/">Logout</a>
                 </li>
@@ -79,7 +86,7 @@
             </div>
 
             <div class="col-xs-12 col-md-6  col-lg-4">
-                <a class="h5 text-white text-decoration-none" href="#">About Us</a>
+                <a class="h5 text-white text-decoration-none" href="aboutus">About Us</a>
             </div>
 
             <div class="pt-4 pb-1 col-xs-12 col-md-6  col-lg-12">
@@ -100,3 +107,17 @@
 
 
 </html>
+
+
+
+        {% comment %} <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link text-white" href="/heladeras/">Heladeras </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="/celulares/">Celulares</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="/televisores/">Televisores</a>
+                </li> {% endcomment %}
