--- a/templates/base.html
+++ b/templates/base.html
@@ -72,7 +72,7 @@
 
 
     {% endblock %}
-    <footer class="container-fluid-expand-lg margin-botton 0 margin-top 0">
+    {% comment %} <footer class="container-fluid-expand-lg margin-botton 0 margin-top 0">
         <div class="row p-3 container-fluid-expand-lg  text-white text-center p-3" style="background: rgb(0, 0, 0);">
 
             <div class="col-xs-12 col-md-6  col-lg-4">
@@ -93,7 +93,7 @@
                 <p class="sm">&copy; Todos los derechos reservados por Leandro, Lautaro y Luciano </p>
             </div>
         </div>
-    </footer>
+    </footer> {% endcomment %}
 
 
 </body>
