--- a/templates/index.html
+++ b/templates/index.html
@@ -66,7 +66,32 @@ Inicio
 </div>
 </div>
 
+<footer class="container-fluid-expand-lg margin-botton 0 margin-top 0">
+  <div class="row p-3 container-fluid-expand-lg  text-white text-center p-3" style="background: rgb(0, 0, 0);">
+
+      <div class="col-xs-12 col-md-6  col-lg-4">
+          <p class="h5 text-center">Este proyecto fue realizado con mucha dedicacion.
+              Gracias por las enseñanzas
+          </p>
+      </div>
+
+      <div class="col-xs-12 col-md-6  col-lg-4">
+          <a class="h5 text-white text-decoration-none" href="/contact/"> Contacto </a>
+      </div>
+
+      <div class="col-xs-12 col-md-6  col-lg-4">
+          <a class="h5 text-white text-decoration-none" href="aboutus">About Us</a>
+      </div>
+
+      <div class="pt-4 pb-1 col-xs-12 col-md-6  col-lg-12">
+          <p class="sm">&copy; Todos los derechos reservados por Leandro, Lautaro y Luciano </p>
+      </div>
+  </div>
+</footer>
+
 {% endblock %}
+
+
 
 
 
