Perfil Leandro creado

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -16,7 +16,7 @@
           <h5 class="card-title">Leandro Frattini</h5>
           <p class="card-text">Agente Maritimo Semi Senior <br> Futuro Backend Developer. <br> Apasionado por la Tecnologia.
           </p>
-          <a href="#" class="btn btn-success">Chequear Perfil!</a>
+          <a href="/leandro/" class="btn btn-success">Chequear Perfil!</a>
         </div>
       </div>
     </div>
