--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,17 @@
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-
+        {% if request.user.is_authenticated %}
+        <li>
+        <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" margin-left-40rem role="button" data-toggle="dropdown" aria-expanded="false" >
+            Nuestros Productos
+        </a>
+            <div class="dropdown-menu"  aria-labelledby="navbarDropdown"  >
+                    <a class="dropdown-item" href="/heladeras/">Heladeras </a>
+                    <a class="dropdown-item" href="/celulares/">Celulares</a>
+                    <a class="dropdown-item" href="/televisores/">Televisores</a>
+                </div>
+            </li>
         <li class="nav-item active">
             <a class="nav-link text-white" href="/contact/">Contacto</a>
         </li>
@@ -30,17 +40,7 @@
         <li class="nav-item active ">
             <a class="nav-link text-white" href="/aboutus/">Sobre Nosotros</a>
         </li>
-        {% if request.user.is_authenticated %}
-        <li>
-        <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
-            Nuestros Productos
-        </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="/heladeras/">Heladeras </a>
-                    <a class="dropdown-item" href="/celulares/">Celulares</a>
-                    <a class="dropdown-item" href="/televisores/">Televisores</a>
-                </div>
-            </li>
+        
     {% endif %}
                 <li class="nav-item" style="margin-right: 35rem">
                     
