--- a/templates/detalle_celulares.html
+++ b/templates/detalle_celulares.html
@@ -16,6 +16,8 @@
 
     <div class="card" style="width: 18rem;">
         <div class="card-body">
+        
+            <img src= {{detalle_celulares.image.url}} class="card-img-top" >
             <h5 class="card-title">{{detalle_celulares.name}}</h5>
             <p class="card-text">Precio: {{detalle_celulares.price}}</p> 
             <p class="card-text">Pulgadas: {{detalle_celulares.inches}}</p> 
