correccion de error en boton ver mas desde search_product

--- a/templates/search_product.html
+++ b/templates/search_product.html
@@ -18,7 +18,7 @@
             <h5 class="card-title">{{producto.name}}</h5>
             <p class="card-text">{{producto.description}}</p>
             <p class="card-text">{{producto.price}}</p>
-            <a href="/list_products/" class="btn btn-primary">Ver mas!</a>
+            <a href="/detalle_heladeras/{{producto.id}}/" class="btn btn-primary">Ver mas!</a>
         </div>
     </div>
 
@@ -31,7 +31,7 @@
             <h5 class="card-title">{{producto.name}}</h5>
             <p class="card-text">{{producto.description}}</p>
             <p class="card-text">{{producto.price}}</p>
-            <a href="/list_products/" class="btn btn-primary">Ver mas!</a>
+            <a href="/detalle_celulares/{{producto.id}}/" class="btn btn-primary">Ver mas!</a>
         </div>
     </div>
 
@@ -44,7 +44,7 @@
             <h5 class="card-title">{{producto.name}}</h5>
             <p class="card-text">{{producto.description}}</p>
             <p class="card-text">{{producto.price}}</p>
-            <a href="/list_products/" class="btn btn-primary">Ver mas!</a>
+            <a href="/detalle_televisores/{{producto.id}}/" class="btn btn-primary">Ver mas!</a>
         </div>
     </div>
 <br>
