--- a/templates/detalle_heladeras.html
+++ b/templates/detalle_heladeras.html
@@ -9,22 +9,30 @@
 
 <a style="margin-left:50rem" href="/heladeras/" class="btn btn-primary">Volver atras!</a>
 
-<h1>{{message}}</h1>
+{{message}}
 
 <div class="d-flex" style="margin-top:5rem; margin-left:7rem">
     
 
     <div class="card" style="width: 18rem;">
-        <div class="card-body">
+        {%if detalle_heladeras.image%}
+        <img src= {{detalle_heladeras.image.url}} class="card-img-top" width="100" height="300">
+        {%endif%}
+        <div class="card-body"></div>
+
             <h5 class="card-title">{{detalle_heladeras.name}}</h5>
             <p class="card-text">Precio: {{detalle_heladeras.price}}</p> 
             <p class="card-text">Pulgadas: {{detalle_heladeras.inches}}</p> 
             <p class="card-text">Descripcion: {{detalle_heladeras.description}}</p> 
             <p class="card-text">SKU: {{detalle_heladeras.SKU}}</p> 
             <a href="/editar_heladera/{{detalle_heladeras.id}}/" class="btn btn-primary">Editar</a>
+            {%if request.user.is_authenticated and request.user.is_superuser%}
             <a href="/eliminar_heladera/{{detalle_heladeras.id}}/" class="btn btn-primary">Eliminar</a>
+            {%endif%}
         </div>
     </div>
+
+<br>
 
 
 
