--- a/templates/heladeras.html
+++ b/templates/heladeras.html
@@ -20,7 +20,9 @@ Productos
 
     <div class="d-flex" style="margin-top:3rem; margin-left:4rem">
     <div class="card " style="width: 20rem ">
-        <img src="..." class="card-img-top" alt="...">
+        {%if heladera.image%}
+        <img src= {{heladera.image.url}} class="card-img-top" >
+        {%endif%}
         <div class="card-body ">
 
             <h5 class="card-title text-center">{{heladera.name}}</h5>
