--- a/templates/search_product.html
+++ b/templates/search_product.html
@@ -14,6 +14,9 @@
     {% for producto in productoheladeras %}
 
     <div class="card" style="width: 18rem;">
+        {%if producto.image%}
+        <img src= {{producto.image.url}} class="card-img-top" width="100" height="300">
+        {%endif%}
         <div class="card-body">
             <h5 class="card-title">{{producto.name}}</h5>
             <p class="card-text">{{producto.description}}</p>
@@ -27,6 +30,9 @@
     {% for producto in productocel  %}
 
     <div class="card" style="width: 18rem;">
+        {%if producto.image%}
+        <img src= {{producto.image.url}} class="card-img-top" width="100" height="300">
+        {%endif%}
         <div class="card-body">
             <h5 class="card-title">{{producto.name}}</h5>
             <p class="card-text">{{producto.description}}</p>
@@ -40,6 +46,9 @@
     {% for producto in productotv  %}
 
     <div class="card" style="width: 18rem;">
+        {%if producto.image%}
+        <img src= {{producto.image.url}} class="card-img-top" width="100" height="300">
+        {%endif%}
         <div class="card-body">
             <h5 class="card-title">{{producto.name}}</h5>
             <p class="card-text">{{producto.description}}</p>
