--- a/templates/detalle_televisores.html
+++ b/templates/detalle_televisores.html
@@ -15,6 +15,9 @@
     
 
     <div class="card" style="width: 18rem;">
+        {%if detalle_televisores.image%}
+        <img src= {{detalle_televisores.image.url}} class="card-img-top" width="100" height="300">
+        {%endif%}
         <div class="card-body">
             <h5 class="card-title">{{detalle_televisores.name}}</h5>
             <p class="card-text">Precio: {{detalle_televisores.price}}</p> 
