--- a/templates/editar_televisor.html
+++ b/templates/editar_televisor.html
@@ -9,7 +9,7 @@ Editar Televisor
     {% if form %}
         <h2 style="margin-left:30rem">Complete los campos a editar</h2>
         <a style="margin-left:50rem" href="/televisores/" class="btn btn-primary">Volver atras!</a>
-        <form action="" method="POST" style="margin-left:40rem;margin-top:7rem">
+        <form action="" method="POST" style="margin-left:40rem;margin-top:7rem"enctype="multipart/form-data">
             {% csrf_token %}
             <table>
                 {{form.as_table}}
