actualizacion contacto Luciano

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -27,7 +27,7 @@
         <img src="https://media-exp1.licdn.com/dms/image/C4D03AQG0MJteNDb6Lg/profile-displayphoto-shrink_200_200/0/1645013272747?e=1661990400&v=beta&t=BDni0rPDBcQjYdSNr8c737VIh8-w3zmpx70pc6PRNus" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Luciano Suarez</h5>
-          <p class="card-text">Tecnico superior en Programación <br> Coordinador de Logistica</p>
+          <p class="card-text">Tecnico superior en Programación <br> Coordinador de compras e inventario <br> Futuro Fullstack Developer.</p>
           <a href="#" class="btn btn-success">Chequear Perfil!</a>
         </div>
       </div>
