inicio de carrousel de Luciano

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -28,7 +28,7 @@
         <div class="card-body">
           <h5 class="card-title">Luciano Suarez</h5>
           <p class="card-text">Tecnico superior en Programación <br> Coordinador de compras e inventario <br> Futuro Fullstack Developer.</p>
-          <a href="#" class="btn btn-success">Chequear Perfil!</a>
+          <a href="/luciano/" class="btn btn-success">Chequear Perfil!</a>
         </div>
       </div>
     </div>
