--- a/templates/detalle_celulares.html
+++ b/templates/detalle_celulares.html
@@ -25,9 +25,11 @@
             <p class="card-text">Pulgadas: {{detalle_celulares.inches}}</p> 
             <p class="card-text">Descripcion: {{detalle_celulares.description}}</p> 
             <p class="card-text">SKU: {{detalle_celulares.SKU}}</p> 
-            <a href="/editar_celular/{{detalle_celulares.id}}/" class="btn btn-primary">Editar</a>
             {%if request.user.is_authenticated and request.user.is_superuser%}
+            <a href="/editar_celular/{{detalle_celulares.id}}/" class="btn btn-primary">Editar</a>
             <a href="/eliminar_celular/{{detalle_celulares.id}}/" class="btn btn-primary">Eliminar</a>
+            {%else%}
+            <a href="https://listado.mercadolibre.com.ar/celulares#D[A:celulares]" class="btn btn-danger">COMPRAR!!</a>
             {%endif%}
         </div>
     </div>
