--- a/templates/detalle_heladeras.html
+++ b/templates/detalle_heladeras.html
@@ -25,9 +25,11 @@
             <p class="card-text">Pulgadas: {{detalle_heladeras.inches}}</p> 
             <p class="card-text">Descripcion: {{detalle_heladeras.description}}</p> 
             <p class="card-text">SKU: {{detalle_heladeras.SKU}}</p> 
-            <a href="/editar_heladera/{{detalle_heladeras.id}}/" class="btn btn-primary">Editar</a>
             {%if request.user.is_authenticated and request.user.is_superuser%}
+            <a href="/editar_heladera/{{detalle_heladeras.id}}/" class="btn btn-primary">Editar</a>
             <a href="/eliminar_heladera/{{detalle_heladeras.id}}/" class="btn btn-primary">Eliminar</a>
+            {%else%}
+            <a href="https://listado.mercadolibre.com.ar/heladeras-nuevas-y-baratas" class="btn btn-danger">COMPRAR!!</a>
             {%endif%}
         </div>
     </div>
