--- a/templates/detalle_televisores.html
+++ b/templates/detalle_televisores.html
@@ -24,9 +24,11 @@
             <p class="card-text">Pulgadas: {{detalle_televisores.inches}}</p> 
             <p class="card-text">Descripcion: {{detalle_televisores.description}}</p> 
             <p class="card-text">SKU: {{detalle_televisores.SKU}}</p> 
-            <a href="/editar_televisor/{{detalle_televisores.id}}/" class="btn btn-primary">Editar</a>
             {%if request.user.is_authenticated and request.user.is_superuser%}
+            <a href="/editar_televisor/{{detalle_televisores.id}}/" class="btn btn-primary">Editar</a>
             <a href="/eliminar_televisor/{{detalle_televisores.id}}" class="btn btn-primary">Eliminar</a>
+            {%else%}
+            <a href="https://listado.mercadolibre.com.ar/televisores#D[A:televisores]" class="btn btn-danger">COMPRAR!!</a>
             {%endif%}
         </div>
     </div>
