--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
         </li>
 
         <li class="nav-item active ">
-            <a class="nav-link text-white" href="/aboutus/">Sobre Nosotros</a>
+            <a class="nav-link text-white" href="/about/">Sobre Nosotros</a>
         </li>
         
     {% endif %}
