--- a/templates/about.html
+++ b/templates/about.html
@@ -31,10 +31,13 @@
     </div>
     <div class="col">
       <div class="card">
-        <img src="..." class="card-img-top" alt="...">
+        <img src="https://media-exp1.licdn.com/dms/image/C4D03AQGyBlSOMnRseg/profile-displayphoto-shrink_200_200/0/1645668935708?e=1661990400&v=beta&t=SW_PmfxG0hxEspoYV1mxJ7F88u6Gm20wvLx4UUHnbYc" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+          <h5 class="card-title">Lautaro Valdez</h5>
+          <p class="card-text"> En este proyecto, considero que logramos implemetar todas las herramientas que el curso nos brindo,cada uno con su aporte.
+            Por eso, te invito a que hagas un recorrido por la pagina y si todavia no viste nuestros perfiles, aca abajo podes hacerlo.. </p>
+          <br>
+          <a class="btn btn-danger btn-lg-text-center" href="/lautaro/" role="button">Visita mi Perfil</a>
         </div>
       </div>
     </div>
