--- a/templates/luciano.html
+++ b/templates/luciano.html
@@ -33,10 +33,10 @@
                         </ul>
                     </div>
                 </div>
-                <!-- <div class="item carousel-item">
-                    <div class="img-box"><img src="https://scontent.faep9-3.fna.fbcdn.net/v/t31.18172-8/12309499_10207459189893524_8933950086228811654_o.jpg?_nc_cat=101&ccb=1-7&_nc_sid=a9b1d2&_nc_eui2=AeEMiIETjqcgFnp7zzrZroWHzL54OZkdB23Mvng5mR0HbTSpTuARS1PqCLQeApFzQxc&_nc_ohc=Vki2sFAqS7gAX-O1ciz&_nc_ht=scontent.faep9-3.fna&oh=00_AT9iwSrxKn7WkxP9E8lJz9ucGBUKQDc8ljfxbTPhp0eu-Q&oe=62E09068" width="600" height="600" alt=""></div>
-                    <p class="testimonial">En el 2018 me consagre campeon del torneo Panamericano de Kick Boxing, ganando dos peleas en la Categoria de 81kg <br> La primera pelea fue en decision unanime por puntos y la segunda por KO en el segundo Round</p>
-                    <a href="https://www.instagram.com/leofrattini/">Instagram<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
+                <div class="item carousel-item">
+                    <div class="img-box"><img src="https://scontent.flpg1-1.fna.fbcdn.net/v/t1.18169-9/12573684_1157486727602724_6698276853061261104_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=8bfeb9&_nc_eui2=AeEQlCQkhqo2nLMTmlLB3yXForjihXhsIcmiuOKFeGwhyWnUAntfUyyGjhIMaNTpOf807LVqmgqkSDqOn8XgZ-Da&_nc_ohc=zBzJ_9mVLxgAX9O_sLL&tn=8vLfQFeGqcOZEgki&_nc_ht=scontent.flpg1-1.fna&oh=00_AT9br-nZPyyWyosOpd_Xc0V1nbcbq0dwZaLtUUTUM3vaMA&oe=62E62713" width="721" height="422" alt=""></div>
+                    <p class="testimonial">Ingrese aqui para ver mi perfil de instagram <br>
+                    <a href="https://www.instagram.com/lucho.bond/">Instagram<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
                         <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z"/>
                         </svg><a>
                     <div class="star-rating">
@@ -49,9 +49,9 @@
                         </ul>
                     </div>
                 </div>
-                <div class="item carousel-item">
-                    <div class="img-box"><img src="https://scontent.faep9-1.fna.fbcdn.net/v/t31.18172-8/10714251_10204371349419442_4156797839051558242_o.jpg?_nc_cat=103&ccb=1-7&_nc_sid=174925&_nc_eui2=AeHAdNBk4h6PmreuJwhkwsjFvujJih0Sd_u-6MmKHRJ3-4AclSv2E7dMy7IJX_73TcY&_nc_ohc=yOVnOQStQBkAX8iSUHa&_nc_ht=scontent.faep9-1.fna&oh=00_AT8ioaFqWfKV9Kb1Eu1GjHedLeH48vKW9stzgyh6Qds8ZA&oe=62E45642" width="600" height="600" alt=""></div>
-                    <p class="testimonial">Por ultimo y no menos importante, detallo brevemente mis aptitudes personales. Muchas de las cuales me llevaron a ser la persona que soy hoy en dia. <br> Debajo de las mismas se puede encontrar para descargar mi Curriculum actualizado</p>
+                 <div class="item carousel-item">
+                    <div class="img-box"><img src="https://scontent.flpg1-1.fna.fbcdn.net/v/t1.18169-9/18622234_1699076606777064_8613968485169998098_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=19026a&_nc_eui2=AeFsgAi8vWBe5JPoM-umeJVaKAvBg_4pq6ooC8GD_imrqp49TnOjDU6uWTmfzmnUvTYtpCdkQXVUw1R2Vh29CsnJ&_nc_ohc=1_3xDoFzvvsAX8SHBX4&_nc_ht=scontent.flpg1-1.fna&oh=00_AT9qQZ1t9UZSSlrN_h-Irkavggu7LVqAn4D0Un0CJl9u3w&oe=62E5A812" width="865" height="487" alt=""></div>
+                    <p class="testimonial">detallo brevemente mis aptitudes personales. <br> Debajo de las mismas se puede encontrar para descargar mi Curriculum actualizado</p>
                     <p></p>
                     <div class="progress" >
                     <div class="progress-bar bg-success" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">Trabajo en Equipo
@@ -70,13 +70,9 @@
                     <div class="progress">
                     <div class="progress-bar bg-danger" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">Proactividad</div>
                     </div>
-                    <p></p>
-                    <div class="progress">
-                        <div class="progress-bar bg-primary" role="progressbar" style="width: 95%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">Honestidad</div>
-                    </div>
-                    <p></p> <br> <p></p>
+                    <br> <p></p>
 
-                    <a class="btn btn-danger" href="https://drive.google.com/file/d/1rvj_Rla3YiB5JTSyooJDdCHEVTnNjqv1/view?usp=sharing" role="button">Ingrese Aqui para Visualizar y Descargar Curriculum</a>
+                    <a class="btn btn-danger" href="https://docs.google.com/document/d/17w5B2NTfuFhbIDGf83_aSCCNxaghxVLv/edit?usp=sharing&ouid=103230829663493100664&rtpof=true&sd=true" role="button">Ingrese Aqui para Visualizar y Descargar Curriculum</a>
 
                     <p></p> <br> <p></p>
                 </div>
@@ -91,7 +87,7 @@
                     </div>
                 </div>		
 
-            </div> -->
+            </div> 
 
 
             <!-- Carousel controls -->
