card de Luciano en About

--- a/templates/about.html
+++ b/templates/about.html
@@ -22,10 +22,14 @@
     </div>
     <div class="col">
       <div class="card">
-        <img src="..." class="card-img-top" alt="...">
+        <img src="https://media-exp1.licdn.com/dms/image/C4D03AQG0MJteNDb6Lg/profile-displayphoto-shrink_800_800/0/1645013272747?e=1661990400&v=beta&t=l6egLcuufBnSWxeBJ7OUrNTm7ME_lWxkCQZ7O0knswA" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <h5 class="card-title">Luciano Suarez</h5>
+          <p class="card-text">En este proyecto trate de concentrarme en la funcionalidad de la pagina, enfocado en la usabilidad.Trabajamos en equipo mediante git y github 
+            y la metodologia de trabajo fue colaborativa de forma iterativa e incremental con reuniones antes de comenzar y chequeos cada vez que alguno hacia commits.
+            Te invitamos a recorrer nuestra pagina y tambien a ver nuestros perfiles si es que aun no lo hiciste. </p>
+          <br>
+          <a class="btn btn-danger btn-lg-text-center" href="/luciano/" role="button">Visita mi Perfil</a>
         </div>
       </div>
     </div>
