readme creado, req.txt, todo ruteado, faltan productos

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -103,7 +103,7 @@
       </div>
 
       <div class="col-xs-12 col-md-6  col-lg-4">
-        <a class="h5 text-white text-decoration-none" href="aboutus">About Us</a>
+        <a class="h5 text-white text-decoration-none" href="/about/">About Us</a>
       </div>
 
       <div class="pt-4 pb-1 col-xs-12 col-md-6  col-lg-12">
